# routing-appointment-scheduling

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  benchmark.py  diagnostics.py  pyproject.toml  solve.ipynb  solve.py
data/: lns-vs-saa.csv  results-benchmark.csv  runtime-lns-iteration.csv  runtime-optimal-schedule.csv  service-vs-travel.csv
instances/: n10-idx0-distribution0-travel0-serv0.json  n10-idx0-distribution0-travel0-serv1.json  n10-idx0-distribution0-travel1-serv0.json  n10-idx0-distribution0-travel1-serv1.json  n10-idx0-distribution1-travel0-serv0.json  n10-idx0-distribution1-travel0-serv1.json  n10-idx0-distribution1-travel1-serv0.json  n10-idx0-distribution1-travel1-serv1.json  n10-idx1-distribution0-travel0-serv0.json  n10-idx1-distribution0-travel0-serv1.json  n10-idx1-distribution0-travel1-serv0.json  n10-idx1-distribution0-travel1-serv1.json  n10-idx1-distribution1-travel0-serv0.json  n10-idx1-distribution1-travel0-serv1.json  n10-idx1-distribution1-travel1-serv0.json  n10-idx1-distribution1-travel1-serv1.json  n10-idx10-distribution0-travel0-serv0.json  n10-idx10-distribution0-travel0-serv1.json  n10-idx11-distribution0-travel0-serv0.json  n10-idx11-distribution0-travel0-serv1.json  n10-idx12-distribution0-travel0-serv0.json  n10-idx12-distribution0-travel0-serv1.json  n10-idx13-distribution0-travel0-serv0.json  n10-idx13-distribution0-travel0-serv1.json  n10-idx14-distribution0-travel0-serv0.json  n10-idx14-distribution0-travel0-serv1.json  n10-idx15-distribution0-travel0-serv0.json  n10-idx15-distribution0-travel0-serv1.json  n10-idx16-distribution0-travel0-serv0.json  n10-idx16-distribution0-travel0-serv1.json  n10-idx17-distribution0-travel0-serv0.json  n10-idx17-distribution0-travel0-serv1.json  n10-idx18-distribution0-travel0-serv0.json  n10-idx18-distribution0-travel0-serv1.json  n10-idx19-distribution0-travel0-serv0.json  n10-idx19-distribution0-travel0-serv1.json  n10-idx2-distribution0-travel0-serv0.json  n10-idx2-distribution0-travel0-serv1.json  n10-idx2-distribution0-travel1-serv0.json  n10-idx2-distribution0-travel1-serv1.json  (+480 more)
matlab/: EIEW.m  M1.m  TransientIA.m  createVn.m  findValpha.m
notebooks/: App_Sched_True_optimal.ipynb  analyze-benchmark-results.ipynb  appendix-tsang.ipynb  generate-benchmark-instances.ipynb  generate-instances.ipynb  heavy traffic.ipynb  plot-appendix-d.ipynb  plot-runtimes.ipynb  service-vs-travel.ipynb  tsp version.ipynb  utils.py
ras/: CostEvaluator.py  ProblemData.py  Result.py  __init__.py  cvrp.py  double_orientation_tsp.py  full_enumeration.py  large_neighborhood_search.py  modified_tsp.py  nearest_neighbor_smallest_variance_first.py  saa_tsang.py  saa_zhan.py  sample_average_approximation.py  smallest_variance_first.py  tsp.py
tests/: conftest.py  test_original.py  test_zhan.py
tsp_as/: Result.py  __init__.py  __main__.py  double_orientation_tsp.py  full_enumeration.py  increasing_scv.py  solve.py  (+9 more)
(+134 files in other folders)
