[tool.poetry]
name = "tsp-as"
version = "0.1.0"
description = ""
authors = ["Leon Lan <leon.lanyidong@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.3"
matplotlib = "^3.6.0"
alns = "^4.1.0"
tsplib95 = "^0.7.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
isort = "^5.10.1"
black = "^22.8.0"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
